--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-    "name": "scrolltrigger",
-    "version": "1.0.0",
-    "description": "ScrollTrigger is a robust JavaScript toolset that turns developers into animation superheroes. Build high-performance animations that work in **every** major browser. Animate CSS, SVG, canvas, React, Vue, WebGL, colors, strings, motion paths, generic objects...anything JavaScript can touch! The ScrollTrigger plugin lets you create jaw-dropping scroll-based animations with minimal code. No other library delivers such advanced sequencing, reliability, and tight control while solving real-world problems on millions of sites. ScrollTrigger works around countless browser inconsistencies; your animations **just work**. At its core, ScrollTrigger is a high-speed property manipulator, updating values over time with extreme accuracy. It's up to 20x faster than jQuery! Seehttps://sunshine-themes.com for what makes ScrollTrigger so special.",
-    "homepage": "https://sunshine-themes.com",
-    "module": "esm/index.js",
-    "main": "dist/scrollTrigger.js",
-    "filename": "scrollTrigger.min.js",
-    "sideEffects": false,
-    "keywords": [
-        "Sunshine",
-        "Scroll",
-        "ScrollTrigger",
-        "JavaScript",
-        "IntersectionObserver"
-    ],
-    "maintainers": [
-        {
-            "name": "Sherif Magdy",
-            "email": "sherif@sunshine-themes.com",
-            "web": "https://sunshine-themes.com"
-        }
-    ],
-    "license": "Standard 'no charge' license: https://sunshine-themes.com/standard-license. Sunshine members get more: https://sunshine-themes.com/licensing/. Why Sunshine doesn't employ an MIT license: https://sunshine-themes.com/why-license/",
-    "bugs": {
-        "url": "https://sunshine-themes.com/forums/"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/sunshine/ScrollTrigger"
+  "name": "scrolltrigger-io",
+  "version": "1.0.0",
+  "description": "ScrollTrigger is a robust JavaScript toolset that turns developers into animation superheroes. Build high-performance animations that work in **every** major browser. Animate CSS, SVG, canvas, React, Vue, WebGL, colors, strings, motion paths, generic objects...anything JavaScript can touch! The ScrollTrigger plugin lets you create jaw-dropping scroll-based animations with minimal code. No other library delivers such advanced sequencing, reliability, and tight control while solving real-world problems on millions of sites. ScrollTrigger works around countless browser inconsistencies; your animations **just work**. At its core, ScrollTrigger is a high-speed property manipulator, updating values over time with extreme accuracy. It's up to 20x faster than jQuery! Seehttps://sunshine-themes.com for what makes ScrollTrigger so special.",
+  "homepage": "https://sunshine-themes.com",
+  "module": "esm/index.js",
+  "main": "dist/scrollTrigger.js",
+  "filename": "scrollTrigger.min.js",
+  "sideEffects": false,
+  "keywords": [
+    "Scroll",
+    "trigger",
+    "ScrollTrigger",
+    "JavaScript",
+    "animation",
+    "animejs",
+    "IntersectionObserver"
+  ],
+  "maintainers": [
+    {
+      "name": "Sherif Magdy",
+      "email": "sherifmagdy@sunshine-themes.com",
+      "web": "https://sunshine-themes.com"
     }
+  ],
+  "license": "Standard 'no charge' license: https://sunshine-themes.com/standard-license. Why Sunshine doesn't employ an MIT license: https://sunshine-themes.com/why-license/",
+  "bugs": {
+    "url": "https://sunshine-themes.com/forums/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sherif-magdy/ScrollTrigger"
+  }
 }
