--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/eslint-plugin": "^7.17.7",
     "@babel/preset-env": "^7.18.2",
+    "@sherifmagdy/animejs": "^3.3.0",
     "core-js": "^3.22.8",
     "esbuild": "^0.14.43",
     "esbuild-plugin-babel": "^0.2.3",
