--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intersectiontrigger-io",
+  "name": "intersectiontrigger",
   "version": "1.0.0",
   "description": "IntersectionTrigger is a robust JavaScript toolset that turns developers into animation superheroes. Build high-performance animations that work in **every** major browser. Animate CSS, SVG, canvas, React, Vue, WebGL, colors, strings, motion paths, generic objects...anything JavaScript can touch! The IntersectionTrigger plugin lets you create jaw-dropping scroll-based animations with minimal code. No other library delivers such advanced sequencing, reliability, and tight control while solving real-world problems on millions of sites. IntersectionTrigger works around countless browser inconsistencies; your animations **just work**. At its core, IntersectionTrigger is a high-speed property manipulator, updating values over time with extreme accuracy. It's up to 20x faster than jQuery! Seehttps://sunshine-themes.com for what makes IntersectionTrigger so special.",
   "homepage": "https://sunshine-themes.com",
