--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "intersectiontrigger",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "IntersectionTrigger utilizes the most modern web technology to trigger anything by intersection. Including scroll-based animations.",
 	"homepage": "https://sunshine-themes.com/?appID=ss_app_1",
 	"module": "./intersectiontrigger.esm.js",
@@ -14,6 +14,9 @@
 		"./types": "./types/index.d.ts"
 	},
 	"types": "intersectiontrigger.d.ts",
+	"engines": {
+		"node": ">=16"
+	},
 	"keywords": [
 		"intersection",
 		"trigger",
@@ -33,15 +36,21 @@
 	"maintainers": [
 		{
 			"name": "Sherif Magdy",
-			"email": "sherifmagdy@sunshine-themes.com",
+			"email": "eng.sherifmagdy.w@gmail.com",
 			"web": "https://sunshine-themes.com"
 		}
 	],
 	"scripts": {
 		"build": "node scripts/build",
-		"watch": "npm run build -- -w"
+		"dev": "npm run build -- -w",
+		"format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+		"lint": "eslint . --ext .ts",
+		"test": "jest",
+		"test:coverage": "npm test -- --coverage --coverageReporters=text-lcov | tee coverage.lcov",
+		"test:dev": "jest --watchAll",
+		"validate": "npm run lint && npm test && npm run build"
 	},
-	"license": "personal 'no charge' license can be viewed at http://sunshine-themes.com/?appID=ss_app_1&tab=license, Licensees of commercial or business license are granted additional rights. See http://sunshine-themes.com/?appID=ss_app_1&tab=license for details.",
+	"license": "personal 'no charge' license, Licensees of commercial or business license are granted additional rights. See http://sunshine-themes.com/?appID=ss_app_1&tab=license for details.",
 	"bugs": {
 		"url": "https://github.com/sunshine-themes/intersectionTrigger/issues"
 	},
@@ -50,21 +59,27 @@
 		"url": "https://github.com/sunshine-themes/intersectionTrigger"
 	},
 	"devDependencies": {
-		"@babel/eslint-parser": "^7.18.2",
-		"@babel/eslint-plugin": "^7.17.7",
 		"@babel/preset-env": "^7.18.2",
 		"@babel/preset-typescript": "^7.18.6",
-		"@sherifmagdy/animejs": "^3.3.0",
 		"@types/animejs": "^3.1.7",
+		"@types/jest": "^29.4.0",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"@typescript-eslint/parser": "^5.54.0",
 		"core-js": "^3.22.8",
 		"esbuild": "^0.14.43",
 		"esbuild-plugin-babel": "^0.2.3",
 		"esbuild-plugin-filesize": "^0.3.0",
-		"eslint": "^8.17.0",
+		"eslint": "^8.35.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jest": "^27.2.1",
+		"eslint-plugin-prettier": "^4.2.1",
 		"estrella": "^1.4.1",
 		"exec-sh": "^0.4.0",
 		"fs-extra": "^10.1.0",
+		"jest": "^29.4.3",
+		"prettier": "^2.8.4",
+		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.5"
 	}
 }
