--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true
 	},
-	"exclude": ["node_modules", "dist", "tests/**/*.test.ts", "coverage"]
+	"exclude": ["node_modules", "dist", "tests/**/*.test.ts", "coverage", "scripts"]
 }
