--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "commonjs",
-		"rootDir": "./src",
+		"rootDirs": ["./src", "./tests/**/*.test.ts"],
 		"removeComments": false,
 		"noEmit": true,
 		"isolatedModules": true,
@@ -21,5 +21,5 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true
 	},
-	"exclude": ["node_modules", "dist", "tests/**/*.test.ts", "coverage", "scripts"]
+	"exclude": ["node_modules", "dist", "coverage", "scripts"]
 }
