CI: change path to 'dist' folder

--- a/.github/workflows/push-branch.yml
+++ b/.github/workflows/push-branch.yml
@@ -26,4 +26,4 @@ jobs:
         run: npm run build
 
       - name: Check if 'dist' folder exists
-        run: test -d /path/to/directory && echo "Directory exists" || echo "Directory does not exist"
+        run: test -d ./dist && echo "Directory exists" || echo "Directory does not exist"
