--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "intersectiontrigger",
-	"version": "1.1.3",
+	"version": "1.1.2",
 	"description": "IntersectionTrigger utilizes the most modern web technology to trigger anything by intersection. Including scroll-based animations.",
 	"homepage": "https://sunshine-themes.com/?appID=ss_app_1",
 	"module": "./intersectiontrigger.esm.js",
@@ -43,11 +43,12 @@
 	"scripts": {
 		"build": "node scripts/build",
 		"dev": "npm run build -- -w",
+		"dev:tdd": "npm run test:watch",
 		"format": "prettier --config .prettierrc 'src/**/*.ts' --write",
 		"lint": "eslint . --ext .ts",
 		"test": "jest",
 		"test:coverage": "npm test -- --coverage",
-		"test:dev": "jest --watchAll",
+		"test:watch": "jest --watchAll",
 		"validate": "npm run lint && npm test && npm run build"
 	},
 	"license": "personal 'no charge' license, Licensees of commercial or business license are granted additional rights. See http://sunshine-themes.com/?appID=ss_app_1&tab=license for details.",
