--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -35,15 +35,11 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: node
-          pull-request-title-pattern: 'chore: release ${version}'
-
-      - name: Change directory to dist
-        run: cd dist
 
       # If the above action creates a GitHub release, then also publish to npm
       # This must be attached to this workflow, as one workflow cannot trigger another (e.g. on release create)
       - name: Publish to npm
         if: ${{ steps.release.outputs.release_created }}
-        run: npm publish --access public
+        run: cd dist && npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
