--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
 		"@typescript-eslint/no-non-null-assertion": "off",
 		"@typescript-eslint/no-empty-function": "warn",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
+		"@typescript-eslint/no-var-requires": "off",
 		"prettier/prettier": [
 			"error",
 			{
