--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@types/jest": "^29.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
+		"animejs": "^3.2.1",
 		"core-js": "^3.22.8",
 		"esbuild": "^0.14.43",
 		"esbuild-plugin-babel": "^0.2.3",
@@ -78,7 +79,8 @@
 		"estrella": "^1.4.1",
 		"exec-sh": "^0.4.0",
 		"fs-extra": "^10.1.0",
-		"jest": "^29.4.3",
+		"jest": "^29.5.0",
+		"jest-environment-jsdom": "^29.5.0",
 		"prettier": "^2.8.4",
 		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.5"
