--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"@typescript-eslint/parser": "^5.54.0",
 		"animejs": "^3.2.1",
 		"core-js": "^3.22.8",
+		"cypress": "^12.8.1",
 		"esbuild": "^0.14.43",
 		"esbuild-plugin-babel": "^0.2.3",
 		"esbuild-plugin-filesize": "^0.3.0",
@@ -79,6 +80,7 @@
 		"estrella": "^1.4.1",
 		"exec-sh": "^0.4.0",
 		"fs-extra": "^10.1.0",
+		"http-server": "^14.1.1",
 		"jest": "^29.5.0",
 		"jest-environment-jsdom": "^29.5.0",
 		"prettier": "^2.8.4",
