--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,22 +3,21 @@
 	"env": {
 		"browser": true,
 		"node": true,
-		"es2022": true,
-		"jest": true
+		"es2022": true
 	},
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": ["@typescript-eslint", "import", "prettier", "jest"],
+	"plugins": ["@typescript-eslint", "import", "prettier"],
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:import/errors",
 		"plugin:import/warnings",
-		"plugin:jest/recommended",
+		"plugin:cypress/recommended",
 		"prettier"
 	],
 	"rules": {
