--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
 		"build": "node scripts/build",
 		"dev": "npm run build -- -w",
 		"dev:tdd": "npm run test:watch",
-		"format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+		"format": "prettier --config .prettierrc.json \"{src,tests,cypress,mocks}/**/*.{js,ts}\" --write",
 		"lint": "eslint . --ext .ts",
-		"test": "jest",
+		"cy:open": "npx cypress open",
+		"cy:run": "npx cypress run",
+		"server": "http-server -p 3000",
+		"test": "npm run cy:run",
+		"test:watch": "npm run cy:open",
 		"test:coverage": "npm test -- --coverage",
-		"test:watch": "jest --watchAll",
-		"validate": "npm run lint && npm test && npm run build"
+		"validate": "npm run format && npm run lint && npm test && npm run build"
 	},
 	"license": "personal 'no charge' license, Licensees of commercial or business license are granted additional rights. See http://sunshine-themes.com/?appID=ss_app_1&tab=license for details.",
 	"bugs": {
@@ -63,7 +66,6 @@
 		"@babel/preset-env": "^7.18.2",
 		"@babel/preset-typescript": "^7.18.6",
 		"@types/animejs": "^3.1.7",
-		"@types/jest": "^29.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
 		"animejs": "^3.2.1",
@@ -74,6 +76,7 @@
 		"esbuild-plugin-filesize": "^0.3.0",
 		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jest": "^27.2.1",
 		"eslint-plugin-prettier": "^4.2.1",
@@ -81,10 +84,7 @@
 		"exec-sh": "^0.4.0",
 		"fs-extra": "^10.1.0",
 		"http-server": "^14.1.1",
-		"jest": "^29.5.0",
-		"jest-environment-jsdom": "^29.5.0",
 		"prettier": "^2.8.4",
-		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.5"
 	}
 }
