Chore: add a new rule to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,8 @@
 			}
 		],
 		"arrow-body-style": "off",
-		"prefer-arrow-callback": "off"
+		"prefer-arrow-callback": "off",
+		"cypress/no-unnecessary-waiting": "warn"
 	},
 	"globals": {},
 	"overrides": []
