Chore(test): change 'tsconfig' configuration for the 'html' folder's scripts

--- a/cypress/scripts/tsconfig.json
+++ b/cypress/scripts/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"target": "ESNext",
+		"module": "ESNext",
+		"noEmit": true,
 		"esModuleInterop": true,
 		"removeComments": false,
 		"forceConsistentCasingInFileNames": true,
