--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.1.3",
 	"description": "IntersectionTrigger utilizes the most modern web technology to trigger anything by intersection. Including scroll-based animations.",
 	"homepage": "https://sunshine-themes.com/?appID=ss_app_1",
+	"type": "module",
 	"module": "./intersectiontrigger.esm.js",
 	"main": "./intersectiontrigger.esm.js",
 	"exports": {
@@ -41,18 +42,20 @@
 		}
 	],
 	"scripts": {
-		"build": "node scripts/build",
-		"dev": "npm run build -- -w",
-		"dev:tdd": "npm run test:watch",
+		"build": "ts-node scripts/build",
+		"build:watch": "ts-node scripts/build -- -w",
+		"dev": "start-test server http://localhost:3000 'conc --kill-others-on-fail -c \"auto\" \"npm:build:watch\" \"npm:test:build:watch\" \"npm:cy:open\"'",
 		"format": "prettier --config .prettierrc.json \"{src,tests,cypress,mocks}/**/*.{js,ts}\" --write",
 		"lint": "eslint . --ext .ts",
+		"server": "http-server -p 3000",
 		"cy:open": "npx cypress open",
 		"cy:run": "npx cypress run",
-		"server": "http-server -p 3000",
-		"test": "npm run cy:run",
-		"test:watch": "npm run cy:open",
+		"cy:record": "npx cypress run --record",
+		"test": "start-test server http://localhost:3000 'conc -g -c \"auto\" \"npm:test:build\" \"npm:cy:run\"'",
+		"test:build": "ts-node cypress/scripts/esbuild.ts",
+		"test:build:watch": "npm run test:build -- -w",
 		"test:coverage": "npm test -- --coverage",
-		"validate": "npm run format && npm run lint && npm test && npm run build"
+		"validate": "conc -g -c \"auto\" format lint build"
 	},
 	"license": "personal 'no charge' license, Licensees of commercial or business license are granted additional rights. See http://sunshine-themes.com/?appID=ss_app_1&tab=license for details.",
 	"bugs": {
@@ -63,28 +66,39 @@
 		"url": "https://github.com/sunshine-themes/intersectionTrigger"
 	},
 	"devDependencies": {
-		"@babel/preset-env": "^7.18.2",
+		"@babel/core": "^7.21.4",
+		"@babel/preset-env": "^7.21.4",
 		"@babel/preset-typescript": "^7.18.6",
+		"@cypress/code-coverage": "^3.10.1",
+		"@istanbuljs/nyc-config-typescript": "^1.0.2",
 		"@types/animejs": "^3.1.7",
+		"@types/fs-extra": "^11.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
 		"animejs": "^3.2.1",
+		"babel-loader": "^9.1.2",
+		"babel-plugin-istanbul": "^6.1.1",
+		"concurrently": "^8.0.1",
 		"core-js": "^3.22.8",
-		"cypress": "^12.8.1",
-		"esbuild": "^0.14.43",
+		"cypress": "^12.11.0",
+		"esbuild": "^0.17.12",
 		"esbuild-plugin-babel": "^0.2.3",
-		"esbuild-plugin-filesize": "^0.3.0",
+		"esbuild-sass-plugin": "^2.8.0",
 		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jest": "^27.2.1",
 		"eslint-plugin-prettier": "^4.2.1",
 		"estrella": "^1.4.1",
 		"exec-sh": "^0.4.0",
 		"fs-extra": "^10.1.0",
 		"http-server": "^14.1.1",
+		"nyc": "^15.1.0",
 		"prettier": "^2.8.4",
-		"typescript": "^4.9.5"
+		"source-map-support": "^0.5.21",
+		"start-server-and-test": "^2.0.0",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.5",
+		"webpack": "^5.81.0"
 	}
 }
