--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -24,10 +24,9 @@ jobs:
         run: npm ci
 
       - name: Run tests and generate coverage report
-        run: npm run test:coverage
+        run: npm run test
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
-          flags: unittests
           fail_ci_if_error: true
