--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -73,9 +73,9 @@ jobs:
       # containers, because this will kill Cypress processes
       # leaving Cypress Cloud hanging ...
       fail-fast: false
-      matrix:
-        # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+      # matrix:
+      #   # run copies of the current job in parallel
+      #   containers: [1, 2, 3, 4, 5]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -100,8 +100,8 @@ jobs:
           wait-on-timeout: 120
           browser: chrome
           # record: true
-          parallel: true
-          group: 'Chrome Tests'
+          # parallel: true
+          # group: 'Chrome Tests'
         env:
           # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Recommended: pass the GitHub token lets this action correctly
@@ -120,9 +120,9 @@ jobs:
       # containers, because this will kill Cypress processes
       # leaving Cypress Cloud hanging ...
       fail-fast: false
-      matrix:
-        # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+      # matrix:
+      #   # run copies of the current job in parallel
+      #   containers: [1, 2, 3, 4, 5]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -141,8 +141,8 @@ jobs:
           wait-on-timeout: 120
           browser: firefox
           # record: true
-          parallel: true
-          group: 'Firefox Tests'
+          # parallel: true
+          # group: 'Firefox Tests'
         env:
           # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Recommended: pass the GitHub token lets this action correctly
@@ -158,9 +158,9 @@ jobs:
       # containers, because this will kill Cypress processes
       # leaving Cypress Cloud hanging ...
       fail-fast: false
-      matrix:
-        # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+      # matrix:
+      #   # run copies of the current job in parallel
+      #   containers: [1, 2, 3, 4, 5]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -178,8 +178,8 @@ jobs:
           wait-on: 'http://localhost:3000'
           wait-on-timeout: 120
           # record: true
-          parallel: true
-          group: 'Electron Tests'
+          # parallel: true
+          # group: 'Electron Tests'
         env:
           # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Recommended: pass the GitHub token lets this action correctly
@@ -195,9 +195,9 @@ jobs:
       # containers, because this will kill Cypress processes
       # leaving Cypress Cloud hanging ...
       fail-fast: false
-      matrix:
-        # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+      # matrix:
+      #   # run copies of the current job in parallel
+      #   containers: [1, 2, 3, 4, 5]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -216,8 +216,8 @@ jobs:
           wait-on-timeout: 120
           browser: edge
           # record: true
-          parallel: true
-          group: 'Edge Tests'
+          # parallel: true
+          # group: 'Edge Tests'
         env:
           # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Recommended: pass the GitHub token lets this action correctly
