Build: update the dependencies

--- a/package.json
+++ b/package.json
@@ -74,13 +74,14 @@
 		"@types/fs-extra": "^11.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.54.0",
 		"@typescript-eslint/parser": "^5.54.0",
+		"ajv": "^8.12.0",
 		"animejs": "^3.2.1",
 		"babel-loader": "^9.1.2",
 		"babel-plugin-istanbul": "^6.1.1",
 		"concurrently": "^8.0.1",
 		"core-js": "^3.22.8",
-		"cypress": "^12.17.3",
-		"esbuild": "^0.17.12",
+		"cypress": "^13.8.1",
+		"esbuild": "^0.20.2",
 		"esbuild-plugin-babel": "^0.2.3",
 		"esbuild-sass-plugin": "^2.8.0",
 		"eslint": "^8.35.0",
@@ -88,7 +89,6 @@
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"estrella": "^1.4.1",
 		"exec-sh": "^0.4.0",
 		"fs-extra": "^10.1.0",
 		"http-server": "^14.1.1",
